testdata/baselines/reference/submodule/compiler/declFileWithInternalModuleNameConflictsInExtendsClause2.errors.txt
declFileWithInternalModuleNameConflictsInExtendsClause2.ts(6,33): error TS2694: Namespace 'A' has no exported member 'C'.


==== declFileWithInternalModuleNameConflictsInExtendsClause2.ts (1 errors) ====
    module X.A.C {
        export interface Z {
        }
    }
    module X.A.B.C {
        export class W implements A.C.Z { // This can refer to it as A.C.Z
                                    ~
!!! error TS2694: Namespace 'A' has no exported member 'C'.
        }
    }
    
    module X.A.B.C {
        module A {
        }
    }